# govforge

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  roadmap.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: backend.yml  backups-smoke.yml  cli.yml  docker.yml  npm.yml  pypi.yml  release.yml  smoke.yml  ui.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/src/govforge/: __init__.py  __main__.py
backend/src/govforge/api/: __init__.py  app.py  auth.py  deps.py  errors.py  schemas.py  server.py
backend/src/govforge/api/routers/: __init__.py  auth.py  decisions.py  disagreements.py  events.py  health.py  me.py  policies.py  projects.py  reviews.py  tasks.py  tokens.py
backend/src/govforge/core/: __init__.py  enums.py  git.py  ids.py  models.py
backend/src/govforge/core/policies/: __init__.py  base.py  defaults.py  loader.py  runner.py
backend/src/govforge/core/services/: __init__.py  approval_service.py  decision_service.py  disagreement_service.py  event_service.py  exceptions.py  inputs.py  policy_service.py  project_service.py  review_service.py  task_service.py  timeline_service.py
backend/src/govforge/db/: __init__.py  session.py
backend/src/govforge/db/migrations/: env.py
backend/src/govforge/db/migrations/versions/: 20260511_114426_baseline_schema.py  20260511_120114_add_device_codes_table.py
backend/src/govforge/mcp/: __init__.py  context.py  prompts.py  resources.py  schemas.py  server.py  tools.py
backend/src/govforge/scripts/: __init__.py  bootstrap_admin.py  migrate.py
backend/tests/: test_smoke.py
backend/tests/integration/: test_pipeline.py
backend/tests/unit/: test_alembic.py  test_api.py  test_git.py  test_mcp.py  test_models.py  test_policies.py  test_security.py  test_services.py
cli/: .goreleaser.yaml  README.md  go.mod  go.sum
docs/: architecture.md  auth-stage-b-handoff.md  brand.md  cli-reference.md  configuration.md  data-model.md  faq.md  github-workflow.md  mcp-integration.md  mcp-reference.md  policy-authoring.md  quickstart.md  release.md  threat-model.md  workflow-example-agents.md  workflow-example.md
infra/: .env.example  RUNBOOK.md
infra/caddy/: Caddyfile
infra/podman/: Containerfile.backend
infra/scripts/: backup.sh  restore.sh  smoke-test.sh
infra/sudoers/: govforge-hypervisor.sudoers  govforge-revproxy.sudoers
marketing/asciinema/: cast-script.md
marketing/dogfood/: journal.md
marketing/launch/: blog-post.md  launch-monitoring.md  linkedin.md  outreach-template.md  reddit.md  show-hn.md  twitter-thread.md
marketing/video/: script.md
npm/: README.md  package.json
npm/scripts/: install.cjs
site/: PLAN.md  package-lock.json  package.json
site/public/: index.html  install.sh
ui/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
vscode/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.webview.json
vscode/src/: agent.ts  backend-status-bar.ts  extension.ts  (+6 more)
(+146 files in other folders)
