[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "govforge"
version = "0.1.0"
description = "Governance infrastructure for AI coding agents — backend (MCP server + HTTP API + services)"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Eric Vaillancourt and GovForge contributors" },
]
keywords = ["mcp", "ai-governance", "claude-code", "codex", "audit-trail"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "fastmcp>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "gitpython>=3.1.43",
    "tomli>=2.0.2; python_version<'3.11'",
    # PostgreSQL driver for hosted deployments (govforge.dev). Local dev
    # still uses SQLite; the URL scheme switches the engine at runtime.
    # The [binary] extra ships libpq inside the wheel — no system dep.
    "psycopg[binary]>=3.2.0",
    # fastmcp imports `packaging.version` at module load time but doesn't
    # always pull it transitively in the lean runtime container. Pin it
    # explicitly so the production image can't be missing it.
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-toml",
]

[project.scripts]
# Entry point Python for `python -m govforge`. The user-facing CLI is `gf` (Go binary).
govforge = "govforge.__main__:main"

[project.urls]
Homepage = "https://govforge.dev"
Repository = "https://github.com/ericvaillancourt/govforge"
Documentation = "https://govforge.dev/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/govforge"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = ["E501"]  # handled by formatter

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends/Query/Path/Body are intentionally called in defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
exclude = ["tests/.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --cov=govforge --cov-report=term-missing"
asyncio_mode = "auto"
